RESOLVED FIXED310801
BitVector::filterSlow fails to zero trailing words when other is inline
https://bugs.webkit.org/show_bug.cgi?id=310801
Summary BitVector::filterSlow fails to zero trailing words when other is inline
Chris Dumez
Reported 2026-03-26 02:38:27 PDT
BitVector::filterSlow fails to zero trailing words when other is inline.
Attachments
Chris Dumez
Comment 1 2026-03-26 02:41:38 PDT
Chris Dumez
Comment 2 2026-03-26 15:42:13 PDT
EWS
Comment 3 2026-03-27 18:47:11 PDT
Committed 310129@main (a7bba6da6eaf): <https://commits.webkit.org/310129@main> Reviewed commits have been landed. Closing PR #61445 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-03-27 18:48:13 PDT
Note You need to log in before you can comment on or make changes to this bug.